--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_RAJAONGKIR = https://api.rajaongkir.com/starter/province
+URL_RAJAONGKIR = https://api.rajaongkir.com/
 API_KEY_RAJAONGKIR = e9a5b9f5bb7a0c14b04aed267ef64f02
